# devops-fastfoodgo-rcem

./: .gitignore  README.md  pyproject.toml  sicamarchecpasouf
.github/workflows/: ci.yml
docs/: FASTFOODGO_swagger.yaml
src/: orders_service.py
src/fastfoodgo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_order_status.py  test_order_total.py
