[project]
name = "fastfoodgo"
version = "0.1.0"
description = "fastfoodgo"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
